--- a/04_UICollectionViewCompositionalLayoutExample/UICollectionViewCompositionalLayoutExample/UICollectionViewCompositionalLayoutExample/View/PhotoCollectionViewCell/PhotoCollectionViewCell.xib
+++ b/04_UICollectionViewCompositionalLayoutExample/UICollectionViewCompositionalLayoutExample/UICollectionViewCompositionalLayoutExample/View/PhotoCollectionViewCell/PhotoCollectionViewCell.xib
@@ -78,7 +78,7 @@
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5R1-jf-ild">
                                 <rect key="frame" x="0.0" y="455" width="320" height="1"/>
-                                <color key="backgroundColor" red="0.86666666670000003" green="0.86666666670000003" blue="0.86666666670000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="sRD-5x-2a8"/>
                                 </constraints>
