--- a/04_UICollectionViewCompositionalLayoutExample/UICollectionViewCompositionalLayoutExample/UICollectionViewCompositionalLayoutExample/View/RecommendCollectionHeaderView/RecommendCollectionHeaderView.xib
+++ b/04_UICollectionViewCompositionalLayoutExample/UICollectionViewCompositionalLayoutExample/UICollectionViewCompositionalLayoutExample/View/RecommendCollectionHeaderView/RecommendCollectionHeaderView.xib
@@ -7,14 +7,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RecommendCollectionHeaderView" customModule="UICollectionViewCompositionalLayoutExample" customModuleProvider="target">
-            <connections>
-                <outlet property="descriptionLabel" destination="8ax-c0-b7h" id="ZSK-2a-NKl"/>
-                <outlet property="titleLabel" destination="cN3-hv-Sce" id="Sxt-mg-dl0"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="U6b-Vx-4bR">
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="U6b-Vx-4bR" customClass="RecommendCollectionHeaderView" customModule="UICollectionViewCompositionalLayoutExample" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
@@ -30,7 +25,7 @@
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ax-c0-b7h">
                             <rect key="frame" x="6" y="37.5" width="308" height="15.5"/>
                             <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="11"/>
-                            <nil key="textColor"/>
+                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
@@ -53,6 +48,10 @@
                 <constraint firstItem="qgN-Q3-oBR" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" id="kC3-Wl-s1V"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="VXr-Tz-HHm"/>
+            <connections>
+                <outlet property="descriptionLabel" destination="8ax-c0-b7h" id="37T-J9-FHQ"/>
+                <outlet property="titleLabel" destination="cN3-hv-Sce" id="jsv-Qy-XKe"/>
+            </connections>
             <point key="canvasLocation" x="133" y="143"/>
         </collectionReusableView>
     </objects>
